# ml-iit

./: pyproject.toml  test.csv  train.csv  valid.csv
dataset/: README.md  test.csv  train.csv  valid.csv
ml_iit/: check.py  main.py  shuffle.py
