[tool.poetry]
name = "ml-iit"
version = "0.1.0"
description = ""
authors = ["Magniquick <67406856+Magniquick@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.19.0"
torchaudio = "^2.3.1"
safetensors = "^0.4.3"
tqdm = "^4.66.4"
transformers = "^4.43.3"
datasets = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
