[tool.poetry]
name = "ml-iit"
version = "0.1.0"
description = ""
authors = ["Magniquick <67406856+Magniquick@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.19.0"
torchaudio = "^2.3.1"
safetensors = "^0.4.3"
tqdm = "^4.66.4"
transformers = {extras = ["torch"], version = "^4.43.4"}
datasets = "^2.20.0"
coral-pytorch = "^1.4.0"
evaluate = {extras = ["all"], version = "^0.4.2"}
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
